# kessel

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  HANDOFF.md  HANDOFF_TS.md  KNOWN_BUGS.md  LICENSE  OXC_ORACLE.json  OXC_PARITY.md  README.md  SESSION_REPORT.md  Taskfile.yml  Taskfile.yml.bak  package-lock.json  package.json  test_arrow_destructuring.js  test_debug.odin  test_object_literal.js
.cruft/: optimize-results.tsv
.swarm/: 01-jsx-nested.md  02-unicode-escape.md  03-err-structured.md  04-est-loc.md  05-esm-module-record.md  06-ambient-module.md  07-lt-trial-parse-design.md  08-ts-estree-alignment-design.md  README.md
bench/: bench_integration.js
bench/oxc_compare/: Cargo.toml  README.md
bench/oxc_compare/cli/: Cargo.toml
bench/oxc_compare/cli/src/: main.rs
bench/oxc_compare/microbench/: Cargo.toml
bench/oxc_compare/microbench/src/: main.rs
docs/: ARCH_AUDIT.md  BENCHMARKS.md  FUNDAMENTAL_DIFFERENCES.md  OXC_COMPARISON.md  PROFILING.md  SIMD_OPPORTUNITIES.md  binary-ast-design.md  diagnostics.md  dod-prototype-plan.md  perf-analysis.md  perf-architectural-analysis.md  perf-bottleneck-profile.md  perf-deep-analysis.md  perf-deep-dive-summary.md  perf-session-22-final.md  perf-session-23.md  perf-session-24.md  perf-session-25-dead-state-audit.md  perf-session-25-final.md  perf-session-25-plan.md  perf-session-25-wave0.md
eval/: README.md  eval_model.sh  eval_single.sh  task1.txt  task2.txt  task3.txt
kessel/: BENCHMARK_FINAL.md  BENCHMARK_RESULTS.md  HANDOFF.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_FINAL.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_NEON_COMPLETE.md  OPTIMIZATION_PHASE2_SUMMARY.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_ROADMAP.md  PARSER_FIXES.md  README.md  bench.js  bench.sh  bench_compare.sh  bench_large.js  bench_medium.js  bench_realistic.js  bench_small.js  bench_tiny.js  (+45 more)
(+1126 files in other folders)
