[workspace]
members = ["cli", "microbench", "codegen_microbench"]
resolver = "2"

# Path to the pinned local OXC checkout. Keep ../oxc at the commit recorded
# in ../../OXC_ORACLE.json; `task bench:oxc:verify` checks this before
# comparison builds.
#
# To set up:
#   git clone https://github.com/oxc-project/oxc.git ../oxc
#   git -C ../oxc checkout "$(node -p "require('./OXC_ORACLE.json').oxc_git_commit")"
[workspace.dependencies]
oxc_allocator = { path = "../../../oxc/crates/oxc_allocator" }
oxc_parser    = { path = "../../../oxc/crates/oxc_parser" }
oxc_span      = { path = "../../../oxc/crates/oxc_span" }
oxc_ast       = { path = "../../../oxc/crates/oxc_ast", features = ["serialize"] }
oxc_estree    = { path = "../../../oxc/crates/oxc_estree", features = ["serialize"] }
oxc_codegen   = { path = "../../../oxc/crates/oxc_codegen" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
